# PEFT-ViT-finetuning

./: .gitignore  README.md  pyproject.toml
PEFT_ViT_finetuning.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
configs/: config.yaml  lora_config.yaml
configs/data/: cifar10.yaml  rvl_cdip.yaml  tobacco3482.yaml
configs/peft/: dora16.yaml  freeze.yaml  ft.yaml  lora16.yaml  lora32.yaml
docker/: Dockerfile
finetuning/: data_utils.py  main.py
finetuning/train/: main.py  train.py
scripts/: run.sh
wandb/: latest-run
wandb/offline-run-20240331_162153-ykujzko8/: run-ykujzko8.wandb
wandb/offline-run-20240416_200350-nlcol2i2/: run-nlcol2i2.wandb
wandb/offline-run-20240416_200602-zs4jpg0c/: run-zs4jpg0c.wandb
wandb/offline-run-20240416_200910-03nhukhv/: run-03nhukhv.wandb
wandb/run-20240417_144201-6j17opth/: run-6j17opth.wandb
wandb/run-20240417_144407-fvzen8qd/: run-fvzen8qd.wandb
wandb/run-20240417_144456-khhu5oeh/: run-khhu5oeh.wandb
wandb/run-20240417_144633-napeauz7/: run-napeauz7.wandb
wandb/run-20240417_170528-zlxbhdnw/: run-zlxbhdnw.wandb
wandb/run-20240417_170905-pwlvezng/: run-pwlvezng.wandb
wandb/run-20240417_171733-wf6p53ff/: run-wf6p53ff.wandb
wandb/run-20240417_173148-ntwwlj9i/: run-ntwwlj9i.wandb
wandb/run-20240417_193405-3u32mhyp/: run-3u32mhyp.wandb
wandb/run-20240418_083042-2hli1ese/: run-2hli1ese.wandb
wandb/run-20240418_083603-2bugtxes/: run-2bugtxes.wandb
wandb/run-20240418_083842-4zjnwlmd/: run-4zjnwlmd.wandb
wandb/run-20240418_084331-cj4jk8q2/: run-cj4jk8q2.wandb
(+94 files in other folders)
