[tool.setuptools]
py-modules = []

[project]
name = "PEFT-ViT-finetuning"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "torch==2.0.1", "torchvision==0.15.2", "hydra-core==1.3",
    "transformers==4.38.2", "tokenizers==0.15.2", "sentencepiece==0.1.99", "shortuuid",
    "accelerate==0.28.0", "peft==0.9.0", "bitsandbytes==0.41.0",
    "pydantic<2,>=1", "markdown2[all]", "numpy", "scikit-learn==1.2.2",
    "gradio==3.35.2", "gradio_client==0.2.9",
    "requests", "httpx==0.24.0", "uvicorn", "fastapi",
    "einops==0.6.1", "einops-exts==0.0.4", "timm==0.6.13", "tiktoken==0.5.2", "datasets==2.18.0"
]

[project.optional-dependencies]
train = ["deepspeed==0.9.5", "ninja", "wandb"]